Fix center align class
Fix class to be more specific

--- a/2020-beta/element/align/css/_align.scss
+++ b/2020-beta/element/align/css/_align.scss
@@ -5,13 +5,14 @@
  * Description:define alignment settings
  */
 
+  .alignCenter {
+ 	text-align: center;
+ 	margin-left: auto;
+ 	margin-right: auto;
+ }
  .alignLeft {
  	text-align: left;
  	margin-right: auto;
- }
- .alignCenter {
- 	text-align: center;
- 	margin: auto;
  }
  .alignRight {
  	text-align: right;
